[gd_scene load_steps=10 format=3 uid="uid://dblvlhypp7f7q"]

[ext_resource type="Script" path="res://Cards/CardBase.gd" id="1_fyui3"]
[ext_resource type="Texture2D" uid="uid://dwr5vae15pqqh" path="res://Cards/Borders/RockyBorder.png" id="2_1k85p"]
[ext_resource type="Texture2D" uid="uid://dmupdpobvd8gp" path="res://Cards/Borders/AirBorder.png" id="3_w3ux8"]
[ext_resource type="Texture2D" uid="uid://bqoe5h8k7umj5" path="res://Cards/Borders/WaterBorder.png" id="4_ft73b"]
[ext_resource type="Texture2D" uid="uid://skhro5xrtsl" path="res://Cards/Borders/background shade.png" id="5_2x2ex"]
[ext_resource type="Texture2D" uid="uid://cqeyf3oclbl6u" path="res://Card_Sprites/Megalodon.png" id="5_6vcq5"]
[ext_resource type="Texture2D" uid="uid://d142djlm5njuv" path="res://Cards/Borders/Border.png" id="6_qfx4p"]
[ext_resource type="FontFile" uid="uid://dqmsq6m33sfcb" path="res://Cards/Borders/Jersey10-Regular.ttf" id="6_uybsl"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qgqoc"]
blend_mode = 3
light_mode = 1

[node name="CardBases" type="TextureButton"]
custom_minimum_size = Vector2(250, 350)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_fyui3")

[node name="RockyBorder" type="Sprite2D" parent="."]
position = Vector2(125, 175)
texture = ExtResource("2_1k85p")

[node name="AirBorder" type="Sprite2D" parent="."]
position = Vector2(125, 175)
texture = ExtResource("3_w3ux8")

[node name="WaterBorder" type="Sprite2D" parent="."]
position = Vector2(125, 175)
texture = ExtResource("4_ft73b")

[node name="Border" type="Sprite2D" parent="."]
position = Vector2(125, 175)
texture = ExtResource("6_qfx4p")

[node name="Card" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_qgqoc")
position = Vector2(125, 174)
texture = ExtResource("5_6vcq5")

[node name="Bars" type="VBoxContainer" parent="."]
layout_mode = 0

[node name="BlankTop" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="Gap1" type="MarginContainer" parent="Bars/Top"]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2

[node name="Type" type="MarginContainer" parent="Bars/Top"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/Top/Type"]
layout_mode = 2
texture = ExtResource("5_2x2ex")

[node name="CenterContainer" type="CenterContainer" parent="Bars/Top/Type"]
layout_mode = 2

[node name="Label" type="Label" parent="Bars/Top/Type/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_uybsl")
theme_override_font_sizes/font_size = 22
text = "AP"

[node name="BlankMiddle" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(2.08165e-12, 250)
layout_mode = 2

[node name="Bottom" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Bars/Bottom"]
custom_minimum_size = Vector2(25, 2.08165e-12)
layout_mode = 2

[node name="Name" type="MarginContainer" parent="Bars/Bottom"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/Bottom/Name"]
custom_minimum_size = Vector2(90, 25)
layout_mode = 2
texture = ExtResource("5_2x2ex")

[node name="CenterContainer" type="CenterContainer" parent="Bars/Bottom/Name"]
layout_mode = 2

[node name="Label" type="Label" parent="Bars/Bottom/Name/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_uybsl")
theme_override_font_sizes/font_size = 22
text = "Megalodon"
horizontal_alignment = 1

[node name="RightGap" type="MarginContainer" parent="Bars/Bottom"]
custom_minimum_size = Vector2(25, 2.08165e-12)
layout_mode = 2
